--- a/src/main/webapp/assets/css/style/variables-light.css
+++ b/src/main/webapp/assets/css/style/variables-light.css
@@ -68,6 +68,7 @@
     --secondary-color: #31d3c0;
 
     --card-bg: #ffffff;
+    --card-bg2: rgba(230, 230, 230, 0.85);
     --card-profile: #97efca;
     --card-border: rgba(0, 0, 0, 0.08);
     --list-bg: #73a4a5;
