--- a/src/main/webapp/assets/css/pages/compare.css
+++ b/src/main/webapp/assets/css/pages/compare.css
@@ -6,6 +6,7 @@
 @import "../components/layout.css";
 @import "../components/banner.css";
 @import "../components/buttons.css";
+@import "../components/header.css";
 
 /* 顶部横幅 */
 .main-container .banner {
