--- a/src/main/webapp/assets/css/pages/login.css
+++ b/src/main/webapp/assets/css/pages/login.css
@@ -7,15 +7,6 @@
     margin: 0;
     padding: 0;
 }
-/*html, body {*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    font-family: 'Montserrat', sans-serif;*/
-/*    font-size: 1rem;*/
-/*    font-weight: 800;*/
-/*    background: #f9f9f9;*/
-/*    color: var(--text-primary);*/
-/*}*/
 
 body {
     height: 100vh;
@@ -29,7 +20,6 @@ body {
             linear-gradient(50deg, rgb(255 0 0), rgb(120 86 255));
     background-blend-mode: overlay, overlay, difference, difference, difference, normal;
 }
-
 
 /*—— 容器 ——*/
 .container {
@@ -173,4 +163,8 @@ body {
 }
 .login-card .footer a:hover {
     text-decoration: underline;
+}
+
+.p {
+    color: var(--text-primary);
 }
