--- a/src/main/webapp/assets/css/style/variables-dark.css
+++ b/src/main/webapp/assets/css/style/variables-dark.css
@@ -53,6 +53,7 @@ body.dark-theme {
     /* 背景色 */
     --bg-primary: #000000;
     --bg-inverse: #ffffff;
+    --bg-post: rgba(102, 102, 102, 0.93);
     --bg-grey: rgba(93, 93, 93, 0.91);
     --bg-banner: linear-gradient(135deg, #1a1a1a, #2d2d2d);
     /* 文本色 */
