--- a/src/main/webapp/assets/css/style/variables-light.css
+++ b/src/main/webapp/assets/css/style/variables-light.css
@@ -56,6 +56,7 @@
     /* Light theme colors */
     --bg-primary: #ffffff;
     --bg-inverse: #000000;
+    --bg-post: rgba(255, 255, 255, 0.8);
     --bg-grey: rgba(225, 225, 225, 0.91);
     --bg-banner: linear-gradient(135deg, #3d7cf4, #2d59c3);
 
@@ -68,7 +69,7 @@
     --secondary-color: #31d3c0;
 
     --card-bg: #ffffff;
-    --card-bg2: rgba(230, 230, 230, 0.85);
+    --card-bg2: rgba(232, 232, 232, 0.85);
     --card-profile: #97efca;
     --card-border: rgba(0, 0, 0, 0.08);
     --list-bg: #73a4a5;
