--- a/src/main/webapp/assets/css/components/layout.css
+++ b/src/main/webapp/assets/css/components/layout.css
@@ -14,6 +14,8 @@ html, body {
     margin: 0;
     padding: 0;
     scrollbar-width: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
     -ms-overflow-style: none;
     height: 100%;
 }
