--- a/src/main/webapp/assets/css/pages/compare.css
+++ b/src/main/webapp/assets/css/pages/compare.css
@@ -3,6 +3,7 @@
 @import url('../components/layout.css');
 @import url('../components/header.css');
 @import url('../style/variables.css');
+@import url('../components/theme-toggle.css');
 
 /* 全局背景跟 login 统一 */
 body {
